--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,21 @@
+appdirs==1.4.4
 asciitree==0.3.3
+certifi==2024.2.2
+charset-normalizer==3.3.2
+click==8.1.7
 configmypy==0.1.0
 contourpy==1.2.0
 cycler==0.12.1
+docker-pycreds==0.4.0
 exceptiongroup==1.2.0
 fasteners==0.19
 filelock==3.13.1
 fonttools==4.50.0
 fsspec==2024.3.1
+gitdb==4.0.11
+GitPython==3.1.42
 h5py==3.10.0
+idna==3.6
 importlib_resources==6.4.0
 iniconfig==2.0.0
 Jinja2==3.1.3
@@ -24,14 +32,21 @@ opt-einsum==3.3.0
 packaging==24.0
 pillow==10.2.0
 pluggy==1.4.0
+protobuf==4.25.3
+psutil==5.9.8
 pyparsing==3.1.2
 pytest==8.1.1
 pytest-mock==3.14.0
 python-dateutil==2.9.0.post0
+PyYAML==6.0.1
+requests==2.31.0
 ruamel.yaml==0.18.6
 ruamel.yaml.clib==0.2.8
 scipy==1.12.0
+sentry-sdk==1.43.0
+setproctitle==1.3.3
 six==1.16.0
+smmap==5.0.1
 sympy==1.12
 tensorly==0.8.1
 tensorly-torch==0.4.0
@@ -39,5 +54,7 @@ tomli==2.0.1
 torch==2.2.1
 torchvision==0.17.1
 typing_extensions==4.10.0
+urllib3==2.2.1
+wandb==0.16.4
 zarr==2.17.1
 zipp==3.18.1
